src/objects/cb5__CBBudgetYear__c.object
<CustomObject>
    <fields>
        <fullName>cb5__End__c</fullName>
        <formula>ADDMONTHS(cb5__Start__c, 12) -  1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cb5__ExtId__c</fullName>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__Start__c</fullName>
        <label>Start</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>CB Budget Year</label>
    <listViews>
        <fullName>cb5__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CB Budget Year Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Budget Years</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>